# valinor

./: AGENTS.md  Cargo.toml
.aiassistant/rules/: agents.md
.cargo/: config.toml
.github/workflows/: rust.yml
bit-twiddling-helpers/: Cargo.toml
illuvatar-service/: Cargo.toml
valhalla-graphtile/: Cargo.toml  README.md
valhalla-graphtile/fixtures/: andorra-traffic.tar
valhalla-graphtile/proptest-regressions/graph_tile/: predicted_speeds.txt
valhalla-graphtile/src/: graph_id.rs  graph_tile.rs  lib.rs  traffic_tile.rs
valhalla-graphtile/src/graph_tile/: access_restriction.rs  admin.rs  builder.rs  directed_edge.rs  handles.rs  header.rs  node.rs  predicted_speeds.rs  sign.rs  transit.rs  turn_lane.rs
valhalla-graphtile/src/graph_tile/header/: builder.rs
valhalla-graphtile/src/graph_tile/snapshots/: valhalla_graphtile__graph_tile__predicted_speeds__tests__base64_encode.snap
valhalla-graphtile/src/snapshots/: valhalla_graphtile__graph_tile__tests__predicted_traffic_speeds_second_profile.snap
valhalla-graphtile/src/tile_provider/: directory.rs  iterators.rs  mod.rs  tarball.rs  traffic.rs
valhalla-microservice/: Cargo.toml  README.md
valhalla-proto/: Cargo.toml
valhalla-proto/src/: lib.rs
valhalla-response/: Cargo.toml
valinor-cli/: Cargo.toml
valinor-cli/src/: main.rs
valinor-export-graph/: Cargo.toml
valinor-export-graph/src/: main.rs
