[package]
name = "valhalla-microservice"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitfield-struct = { workspace = true }
bit-twiddling-helpers = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
valhalla-proto = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
zeromq = "0.5.0-pre"

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
