[package]
name = "valinor-cli"
description = "A CLI multi-tool for quickly inspecting Valhalla graphs"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
valhalla-graphtile = { workspace = true, features = ["serde"] }

[lints]
workspace = true
